fix: Fix grid layouts and overflow handling in web client

--- a/apps/web-client/src/components/holy-grail-layout.css
+++ b/apps/web-client/src/components/holy-grail-layout.css
@@ -2,7 +2,7 @@
   #layout {
     @apply grid;
     @apply bg-gray-100;
-    height: calc(100vh - 8rem);
+    height: 100%;
     overflow: clip;
     grid-template: 1fr / 1fr 64rem 1fr;
   }
@@ -10,7 +10,7 @@
 
 @media screen and (max-width: 32rem) {
   #layout {
-    height: calc(100vh - 8rem);
+    height: 100%;
     grid-template: 1fr / 1fr 1fr;
     overflow: clip;
     max-width: 30rem;
